--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
         pipx ensurepath
         pipx install poetry
 
+    - name: Install dependencies
+      run: |
+        poetry install
+
     - name: Run pytest
       run: |
         poetry run pytest
