--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.9"
-
 dependencies = [
     "speedtest-cli (>=2.1.3,<3.0.0)",
     "typer (>=0.16.0,<0.17.0)",
@@ -16,6 +15,7 @@ dependencies = [
 
 [tool.poetry]
 packages = [{include = "interwebs_speed", from = "src"}]
+package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
