--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ packages = [{include = "interwebs_speed", from = "src"}]
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 
+[tool.poetry.scripts]
+interwebs-speed = "interwebs_speed.cli:app"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
