chore: change image to arm32v7 for run on raspberry

--- a/tools/helm/interwebs-speed/templates/cronjob.yaml
+++ b/tools/helm/interwebs-speed/templates/cronjob.yaml
@@ -33,6 +33,6 @@ spec:
           volumes:
             - name: data-volume
               persistentVolumeClaim:
-                claimName: {{ include "interwebs-speed.fullname" $ }}-data
+                claimName: {{ include "interwebs-speed.fullname" $ }}-pvc
 {{- end }}
 {{- end }}
