--- a/tools/kind/cluster.yaml
+++ b/tools/kind/cluster.yaml
@@ -3,7 +3,7 @@ apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
   extraMounts:
-    - hostPath: ~/kind/data
+    - hostPath: ./data
       containerPath: /data
   extraPortMappings:
   - containerPort: 80
