--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker images
+    - name: Build and push Docker images (latest)
       uses: docker/build-push-action@v6
       with:
         context: .
@@ -58,3 +58,13 @@ jobs:
         tags: |
           cassiofariasmachado/interwebs-speed:latest
           cassiofariasmachado/interwebs-speed:${{ github.sha }}
+
+    - name: Build and push Docker images (arm)
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: Dockerfile.arm
+        platforms: linux/arm/32
+        push: true
+        tags: |
+          cassiofariasmachado/interwebs-speed:arm
