--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,4 +1,4 @@
-FROM python:3.13 AS builder
+FROM --platform=${BUILDPLATFORM} python:3.13 AS builder
 
 # Poetry env vars
 ENV POETRY_NO_INTERACTION=1 \
@@ -8,6 +8,9 @@ ENV POETRY_NO_INTERACTION=1 \
     POETRY_HOME='/usr/local' \
     POETRY_VERSION=2.1.3
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential curl \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN pip install "poetry==$POETRY_VERSION"
 
@@ -18,7 +21,7 @@ COPY pyproject.toml poetry.lock README.md ./
 RUN poetry install --without dev --no-root && rm -rf "$POETRY_CACHE_DIR"
 
 
-FROM python:3.13-slim AS runtime
+FROM --platform=${BUILDPLATFORM} python:3.13-slim AS runtime
 
 WORKDIR /app
 
