--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,22 +49,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build and push Docker images (latest)
       uses: docker/build-push-action@v6
       with:
         context: .
         file: Dockerfile
+        platforms: linux/arm/v7,linux/arm,linux/arm/32,linux/arm/64
         push: true
         tags: |
           cassiofariasmachado/interwebs-speed:latest
           cassiofariasmachado/interwebs-speed:${{ github.sha }}
-
-    - name: Build and push Docker images (arm)
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: Dockerfile.arm
-        platforms: linux/arm/32
-        push: true
-        tags: |
-          cassiofariasmachado/interwebs-speed:arm
