--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Run pytest
       run: |
-        poetry run pytest
+        poetry run pytest --cov=src
 
   build-and-push-image:
     runs-on: ubuntu-latest
